--- a/Watcher/Watcher.csproj
+++ b/Watcher/Watcher.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Core, Version=4.4.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -55,6 +56,10 @@
     <ProjectReference Include="..\Interaction\Interaction.csproj">
       <Project>{e9f14821-12cc-409d-97c3-ca8062ebb085}</Project>
       <Name>Interaction</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Recognition\Recognition.fsproj">
+      <Project>{b796289f-b004-4ab1-90ff-794bcf13bb07}</Project>
+      <Name>Recognition</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
