Total pot and stacks recognition

--- a/Recognition/Recognition.fsproj
+++ b/Recognition/Recognition.fsproj
@@ -46,7 +46,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Numbers.fs" />
+    <Compile Include="StringRecognition.fs" />
+    <Compile Include="ScreenRecognition.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
