--- a/Player/Player.fsproj
+++ b/Player/Player.fsproj
@@ -56,6 +56,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Decide.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
@@ -101,6 +102,11 @@
     <ProjectReference Include="..\Interaction\Interaction.csproj">
       <Name>Interaction</Name>
       <Project>{e9f14821-12cc-409d-97c3-ca8062ebb085}</Project>
+      <Private>True</Private>
+    </ProjectReference>
+    <ProjectReference Include="..\MouseTest\MouseTest.fsproj">
+      <Name>MouseTest</Name>
+      <Project>{5c19a419-096b-47b8-b0fe-784aed6cd3f7}</Project>
       <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\PokerConsole\PokerConsole.fsproj">
