--- a/Interaction/Interaction.csproj
+++ b/Interaction/Interaction.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dumper.cs" />
     <Compile Include="InteractionFacade.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Win32.cs" />
