--- a/Player/Player.fsproj
+++ b/Player/Player.fsproj
@@ -56,7 +56,10 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Click.fs" />
     <Compile Include="Decide.fs" />
+    <Compile Include="Recognize.fs" />
+    <Compile Include="Find.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
