OOP turn, riven and preflop based selection

--- a/PostFlop/PostFlop.fsproj
+++ b/PostFlop/PostFlop.fsproj
@@ -63,6 +63,7 @@
     <Compile Include="HandValueTests.fs" />
     <Compile Include="Monoboard.fs" />
     <Compile Include="Facade.fs" />
+    <Compile Include="FacadeTests.fs" />
     <Content Include="packages.config" />
     <Compile Include="MonoboardTests.fs" />
   </ItemGroup>
