A couple more fixes

--- a/PokerConsole/PokerConsole.fsproj
+++ b/PokerConsole/PokerConsole.fsproj
@@ -67,6 +67,7 @@
     <Compile Include="ImportTests.fs" />
     <Compile Include="Actions.fs" />
     <Compile Include="ActionsTests.fs" />
+    <Compile Include="DecideTests.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
