--- a/PostFlop/PostFlop.fsproj
+++ b/PostFlop/PostFlop.fsproj
@@ -52,6 +52,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Library.fs" />
     <Compile Include="Parsing.fs" />
     <Compile Include="Options.fs" />
     <Compile Include="Decision.fs" />
