--- a/Hands/Cards.fsproj
+++ b/Hands/Cards.fsproj
@@ -54,12 +54,12 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Hands.fs" />
     <Compile Include="HandsTests.fs" />
-    <Content Include="packages.config" />
     <Compile Include="Actions.fs" />
     <Compile Include="HandValues.fs" />
     <Compile Include="HandValuesTests.fs" />
     <Compile Include="Ranges.fs" />
     <Compile Include="RangesTests.fs" />
+    <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FsCheck">
@@ -76,8 +76,13 @@
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="xunit.abstractions">
       <HintPath>..\packages\xunit.abstractions.2.0.0\lib\net35\xunit.abstractions.dll</HintPath>
       <Private>True</Private>
